--- a/css/app.css
+++ b/css/app.css
@@ -1,17 +1,28 @@
 body {
-  max-width: 800px;
-  background-color: #EFC88B;
+  background-color: #574D68;
+  padding: 50px;
 }
 
-.yours {
-  background-color: #574D68;
+#page {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1 {
   color: #CF5C36;
+  transform: scale(1, 3);
+  margin-left: auto;
 }
+
 p {
   width: 36em;
   font-size: 16pt;
   color: #F2E86D;
+  padding: 20px 0;
+  line-height: 1.4em;
+}
+
+br {
+  line-height: 2.2em;
 }
