--- a/css/app.css
+++ b/css/app.css
@@ -13,16 +13,18 @@ h1 {
   color: #CF5C36;
   transform: scale(1, 3);
   margin-left: auto;
+  font-family: 'Slabo 27px', sans-serif;
 }
 
 p {
-  width: 36em;
-  font-size: 16pt;
+  width: 32em;
+  font-size: 18pt;
   color: #F2E86D;
-  padding: 20px 0;
-  line-height: 1.4em;
+  padding: 30px 0;
+  line-height: 1.6em;
+  font-family: Montserrat, monospace;
 }
 
 br {
-  line-height: 2.2em;
+  line-height: 2.5em;
 }
